--- a/index.ipynb
+++ b/index.ipynb
@@ -22,18 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_50 = 50\n",
     "my_number = None\n",
     "if number_50 > 100:\n",
-    "    # if number_50 is greater than 100, assign the `my_number` variable to the number 100\n",
+    "    my_number = 100 # if number_50 is greater than 100, assign the `my_number` variable to the number 100\n",
     "elif number_50 > 50:\n",
-    "    # if number_50 is greater than 50, assign the `my_number` variable to the number 50\n",
+    "    my_number = 50 # if number_50 is greater than 50, assign the `my_number` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `my_number` variable to 0"
+    "    my_number = 0 # else assign the `my_number` variable to 0\n",
+    "\n",
+    "my_number"
    ]
   },
   {
@@ -45,13 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It is so hot out!'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "if temperature > 80:\n",
+    "    is_it_hot = \"It is so hot out!\"\n",
+    "else:\n",
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"# conditionals go here\n",
+    "    \n",
+    "is_it_hot"
    ]
   },
   {
@@ -64,13 +93,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "if today_is == 1:\n",
+    "    day_of_the_week = \"Sunday\"\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = \"Monday\"\n",
+    "elif today_is == 3:\n",
+    "    day_of_the_week = \"Tuesday\"\n",
+    "elif today_is == 4:\n",
+    "    day_of_the_week = \"Wednesday\"\n",
+    "elif today_is == 5:\n",
+    "    day_of_the_week = \"Thursday\"\n",
+    "elif today_is == 6:\n",
+    "    day_of_the_week = \"Friday\"\n",
+    "else:\n",
+    "    day_of_the_week = \"Satuday\"\n",
+    "    \n",
+    "day_of_the_week"
    ]
   },
   {
@@ -82,14 +137,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'True'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "# conditionals go here"
+    "if string.endswith(\"on\"):\n",
+    "    ends_with = \"True\"\n",
+    "else:\n",
+    "    ends_with = \"False\"# conditionals go here\n",
+    "    \n",
+    "ends_with"
    ]
   },
   {
@@ -104,9 +175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:.conda-learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -118,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
